Realizo tercer entrega

--- a/Proyecto Final/package.json
+++ b/Proyecto Final/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proyecto-final",
   "version": "1.0.0",
-  "description": "",
+  "description": "Fincas del Faldeo Casas de Montaña",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
